<resources>
    <string name="app_name">PetMelon</string>
    <string name="action_settings">Settings</string>
    <string name="overview">Overview</string>
    <string name="breed">Breed</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="measurement">Measurement</string>
    <string name="weight">Weight</string>
    <string name="check">Check</string>
    <string name="delete">Delete</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_pets">Delete All Pets</string>
</resources>
